--- a/LibAcousticSensing/Android/libacousticsensing/build.gradle
+++ b/LibAcousticSensing/Android/libacousticsensing/build.gradle
@@ -1,12 +1,11 @@
     apply plugin: 'com.android.library'
 
     android {
-        compileSdkVersion 24
-        buildToolsVersion '25.0.0'
+        compileSdkVersion 27
 
         defaultConfig {
             minSdkVersion 16
-            targetSdkVersion 24
+            targetSdkVersion 27
             versionCode 1
             versionName "1.0"
 
@@ -18,7 +17,7 @@
 
             ndk {
                 // Note sure why, but x86 will have a bug to compile
-                abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a'
+                abiFilters 'armeabi-v7a', 'arm64-v8a'
             }
 
             /*
@@ -45,8 +44,8 @@
     }
 
     dependencies {
-        compile fileTree(include: ['*.jar'], dir: 'libs')
-        testCompile 'junit:junit:4.12'
-        compile 'com.android.support:appcompat-v7:24.0.0'
-        compile 'com.google.code.gson:gson:2.8.0'
+        implementation fileTree(include: ['*.jar'], dir: 'libs')
+        testImplementation 'junit:junit:4.12'
+        implementation 'com.android.support:appcompat-v7:27.0.0'
+        implementation 'com.google.code.gson:gson:2.8.0'
     }
