--- a/DevApp/Android/app/build.gradle
+++ b/DevApp/Android/app/build.gradle
@@ -1,20 +1,19 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion '25.0.0'
+    compileSdkVersion 27
 
     defaultConfig {
         applicationId "umich.cse.yctung.devapp"
         minSdkVersion 16
-        targetSdkVersion 24
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
 
         ndk {
             moduleName = "jni_callback" // module for standalone processing
             ldLibs "log"
-            stl "stlport_shared"
+            stl "c++_shared"
             cFlags "-DDEV_NDK=1 -v"
         }
 
@@ -28,8 +27,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.0.0'
-    compile project(':libacousticsensing')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:27.0.0'
+    implementation project(':libacousticsensing')
 }
