--- a/Example/ForcePhone/Android/app/build.gradle
+++ b/Example/ForcePhone/Android/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "25.0.0"
 
     defaultConfig {
         applicationId "umich.cse.yctung.forcephone"
@@ -19,7 +18,7 @@ android {
 
         ndk {
             // Note sure why, but x86 will have a bug to compile
-            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a'
+            abiFilters 'armeabi-v7a', 'arm64-v8a'
         }
 
         /*
